[package]
name = "envoy-dummy-stats"
version = "0.1.0"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
gotham = "0.4.0"
gotham_derive = "0.4.0"
rand = "0.7.0"
rand_distr = "0.2.1"